G43/security/tls/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mygrocery-ingress
  annotatios:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - mygrocery-g43.com
    secretName: my-tls-secret
  rules:
  - host: mygrocery-g43.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grocery-service
            port:
              number: 8081
